logs/hidash.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/croniter'...
Listing './lib/python3.5/site-packages/croniter/tests'...
Listing './lib/python3.5/site-packages/croniter-0.3.20.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docx'...
Listing './lib/python3.5/site-packages/docx/dml'...
Listing './lib/python3.5/site-packages/docx/enum'...
Listing './lib/python3.5/site-packages/docx/image'...
Listing './lib/python3.5/site-packages/docx/opc'...
Listing './lib/python3.5/site-packages/docx/opc/parts'...
Listing './lib/python3.5/site-packages/docx/oxml'...
Listing './lib/python3.5/site-packages/docx/oxml/text'...
Listing './lib/python3.5/site-packages/docx/parts'...
Listing './lib/python3.5/site-packages/docx/styles'...
Listing './lib/python3.5/site-packages/docx/templates'...
Listing './lib/python3.5/site-packages/docx/text'...
Listing './lib/python3.5/site-packages/docxtpl'...
Listing './lib/python3.5/site-packages/docxtpl-0.4.6.egg-info'...
Listing './lib/python3.5/site-packages/hidash'...
Listing './lib/python3.5/site-packages/hidash/migrations'...
Listing './lib/python3.5/site-packages/hidash/south_migrations'...
Listing './lib/python3.5/site-packages/hidash/static'...
Listing './lib/python3.5/site-packages/hidash/static/css'...
Listing './lib/python3.5/site-packages/hidash/static/fonts'...
Listing './lib/python3.5/site-packages/hidash/static/js'...
Listing './lib/python3.5/site-packages/hidash/static/libs'...
Listing './lib/python3.5/site-packages/hidash/static/libs/angular'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/dist'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/dist/css'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/dist/fonts'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/dist/js'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/fonts'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/grunt'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/js'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/less'...
Listing './lib/python3.5/site-packages/hidash/static/libs/bootstrap/test-infra'...
Listing './lib/python3.5/site-packages/hidash/static/libs/daterangepicker'...
Listing './lib/python3.5/site-packages/hidash/static/libs/google-chart'...
Listing './lib/python3.5/site-packages/hidash/templates'...
Compiling './lib/python3.5/site-packages/hidash/views.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (views.py, line 866)
Listing './lib/python3.5/site-packages/hidash-0.2.29.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_docx-0.8.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
